2015-11-09  Nik Nyby  <nnyby@columbia.edu>

	* Fixed bug where video thumbnails could be missing when
	using the poster attribute.
	* Hide "no assets found" error when asynchronous assets
	get found.
	* Fix a display bug where the asset wasn't always centered
	on the collection page.
	* Collect fullsize images on asia.si.edu.

2015-11-02  Nik Nyby  <nnyby@columbia.edu>

	* Don't alter the aspect ratio of the image in the asset
	finder.