@@ -1,6 +1,6 @@
 {
   "name": "mediathread-bookmarklet",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A bookmarklet for importing assets to Mediathread",
   "main": "bookmarklet.js",
   "scripts": {
