@@ -1,3 +1,9 @@
+2015-11-23  Nik Nyby  <nnyby@columbia.edu>
+
+	* Removed hosthandler for vital.ccnmtl.columbia.edu, since
+	it's not around anymore.
+	* Backport fixes from extension for blakearchive.org.
+
 2015-11-09  Nik Nyby  <nnyby@columbia.edu>
 
 	* Fixed bug where video thumbnails could be missing when
